--- a/src/data/levels/05b_PPU/04_PPU Memory/chat/en.yml
+++ b/src/data/levels/05b_PPU/04_PPU Memory/chat/en.yml
@@ -9,9 +9,16 @@ main:
 
 howso:
   messages: 
-  - the PPU has its own separate 16 KiB address space, specifically designed to fetch the 🕊️  tiles, 🏞️  backgrounds, and 🎨  palettes
+  - the PPU has its own separate 16 KiB <address space>, specifically designed to fetch the 🕊️  tiles, 🏞️  backgrounds, and 🎨  palettes
   - check out 📄  ~/docs/ppu/ppu_memory.en.md~
-  - let's emulate this 🤟
+  - most of the time, it will use these addresses
+  - and it will only use the CPU addresses as a bridge to communicate with the CPU
+  - from now on, we'll say something like "PPU address $1F2A" or "CPU address $1F2A" to differentiate the two spaces
+  responses:
+  - how can we emulate this? 😮 [emulate]
+
+emulate:
+  messages:
   - 📚  _-_create a `PPUMemory` class, using _--_📄 _-_ ~/tmpl/ppu/PPUMemory.js~ as template_--_
   - _-_implement just the first range ($0000-$1FFF), for both `read(...)` and `write(...)` operations_--_
   - _-_on <reads>, you should return ~this.mapper.ppuRead(address)~_--_
