Improving Stack levels

--- a/src/data/levels/05a_CPU/05_Stack/chat/en.yml
+++ b/src/data/levels/05a_CPU/05_Stack/chat/en.yml
@@ -4,7 +4,7 @@ main:
   - remember the stack? 🧱
   - <{stack.png}>
   - 📚  _-_create a new class for it_--_
-  - _-_it should receive the `memory` and `sp` from the CPU, as it will have to interact with them_--_
+  - _-_it should receive the `memory` (~CPUMemory~) and `sp` (~Register8Bit~) from the CPU, as it will have to interact with them_--_
   - |-
     _-_implement these methods:_--_
     *_-_*push(value)**:_--_
