--- a/src/data/levels/05a_CPU/05_Stack/chat/es.yml
+++ b/src/data/levels/05a_CPU/05_Stack/chat/es.yml
@@ -4,7 +4,7 @@ main:
   - ¿recuerdas la pila? 🧱
   - <{stack.png}>
   - 📚  _-_crea una nueva clase para ella_--_
-  - _-_tendría que recibir `memory` y `sp` de la CPU, ya que va a tener que interactuar con ellos_--_
+  - _-_tendría que recibir `memory` (~CPUMemory~) y `sp` (~Register8Bit~) de la CPU, ya que va a tener que interactuar con ellos_--_
   - |-
     _-_implementa estos métodos:_--_
     *_-_*push(value)**:_--_
