--- a/src/data/levels/05a_CPU/15_Execute/chat/es.yml
+++ b/src/data/levels/05a_CPU/15_Execute/chat/es.yml
@@ -37,16 +37,16 @@ rightway:
     📚  _-_primero, vamos a agregar estos métodos a tu `CPU`:_--_
     *_-_*_fetchOperation()**:_--_
       *_-_*->** lee un byte de la ubicación de memoria apuntada por [PC]_--_
-        _-_(llamemos esto ~opcode~)_--_
+        _-_(llamemos a esto ~opcode~)_--_
       *_-_*->** encuentra la operación relacionada con ese opcode:_--_
         _-_~this.operations[opcode]~_--_
-        _-_(llamemos esto ~operation~)_--_
+        _-_(llamemos a esto ~operation~)_--_
       *_-_*->** si ~operation~ no existe, tira un error "Invalid opcode."_--_
       *_-_*->** incrementa [PC]_--_
       *_-_*->** retorna ~operation~_--_
     *_-_*_fetchInput(operation)**:_--_
       *_-_*->** lee 0, 1 (usando ~read(...)~) o 2 bytes (usando ~read16(...)~) de la ubicación de memoria apuntada por [PC], dependiendo de ~operation.addressingMode.inputSize~_--_
-        _-_(llamemos esto ~input~)_--_
+        _-_(llamemos a esto ~input~)_--_
       *_-_*->** incrementa [PC] (0, 1, o 2 veces) para saltear esos bytes_--_
       *_-_*->** retorna ~input~ (o ~null~)_--_
     *_-_*_fetchArgument(operation, input)**:_--_
@@ -58,7 +58,7 @@ rightway:
     *_-_*_addCycles(operation)**:_--_
       *_-_*->** calcula cuántos ciclos tomó la ~operation~:_--_
         _-_~operation.cycles + this.extraCycles~_--_
-        _-_(llamemos esto ~cycles~)_--_
+        _-_(llamemos a esto ~cycles~)_--_
       *_-_*->** actualiza los contadores de ciclos:_--_
         _-_~this.cycle += cycles;~_--_
         _-_~this.extraCycles = 0;~_--_
