--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
-    "@neshacker/6502-tools": "github:rodri042/6502#3de7e48e797fe5e32745b467015d57b0755b96e8",
+    "@neshacker/6502-tools": "github:afska/6502#3de7e48e797fe5e32745b467015d57b0755b96e8",
     "@pixi/layers": "^1.0.11",
     "@rematch/core": "^2.2.0",
     "@rematch/loading": "^2.1.2",
@@ -76,7 +76,7 @@
     "updated-xterm-for-react": "5.2.0",
     "xterm": "5.2.0",
     "xterm-addon-fit": "^0.5.0",
-    "xterm-link-provider": "github:rodri042/xterm-link-provider#c55e642cc05475cd66f7c56e0435df6efc31f8aa",
+    "xterm-link-provider": "github:afska/xterm-link-provider#c55e642cc05475cd66f7c56e0435df6efc31f8aa",
     "yaml": "^2.1.1"
   },
   "main": "desktop.js",
