Starting en script

--- a/src/data/levels/05a_CPU/17_Integrating the CPU/chat/es.yml
+++ b/src/data/levels/05a_CPU/17_Integrating the CPU/chat/es.yml
@@ -17,8 +17,7 @@ doit:
   messages:
   - WOOOW
   - omg
-  - esto es tan difícil
-  - a ver...
+  - nooo
   - oh rayos
   - arruiné todo 😅
   - hmm...
