--- a/src/data/levels/05a_CPU/17_Integrating the CPU/chat/en.yml
+++ b/src/data/levels/05a_CPU/17_Integrating the CPU/chat/en.yml
@@ -17,8 +17,7 @@ doit:
   messages:
   - WOOOW
   - omg
-  - this is so difficult
-  - let's check...
+  - nooo
   - oh crap
   - I messed everything up 😅
   - hmm...
