--- a/src/data/levels/05b_PPU/07_VBlank detection/chat/es.yml
+++ b/src/data/levels/05b_PPU/07_VBlank detection/chat/es.yml
@@ -28,7 +28,7 @@ interrupts:
     *_-_*step(onFrame, onInterrupt)**:_--_
       *_-_*->** si ~this.scanline~ es -1:_--_
         *_-_*->** llama a ~this._onPreLine(onInterrupt)~_--_
-      *_-_*->** si ~this.scanline~ está entre 0 y 240:_--_
+      *_-_*->** si ~this.scanline~ es menor a 240:_--_
         *_-_*->** llama a ~this._onVisibleLine(onInterrupt)~_--_
       *_-_*->** si ~this.scanline~ es 241:_--_
         *_-_*->** llama a ~this._onVBlankLine(onInterrupt)~_--_
