--- a/src/data/levels/05b_PPU/08_VRAM bridge/chat/en.yml
+++ b/src/data/levels/05b_PPU/08_VRAM bridge/chat/en.yml
@@ -13,4 +13,6 @@ how:
   - "(two consecutives writes: one for the <high byte>, and one for the <low byte>)"
   - then, they write to 📦  PPUData the byte they want to put in that address
   - <{PPUAddr_PPUData.png}>
-  responses: []
+  - "// TODO: Add similar illustration to previous level? VideoRegisters"
+  responses:
+  - asd [end]
